# musicpipeline

./: README.md  cleanup_music.zsh  convert_music.zsh  musicpipeline.zsh  musicpipeline_common.zsh  musicpipeline_youtube.zsh  musicpipeline_yt.py  pyproject.toml  sort_music.zsh
musicpipeline/: __init__.py  cli.py  commands.py  constants.py  convert.py  executor.py  models.py  normalize.py  planner.py  probe.py  retag.py  scan.py  undo.py  youtube.py
tests/: test_audio_scrape.py  test_cli_help.py  test_delete_source.py  test_normalize.py  test_planner.py  test_retag.py  test_undo.py  test_youtube.py
